# githubpr

./: .gitmodules  CMakeLists.txt  GitHubPR.cpp  GitHubPR.h  LICENSE  README.md
cmake/: LibGitHubPR.pc.in
include/: BatchCommand.h  GitHubPR.h  PrivateProfile.h  StdAfx.h  generic.h  resource.h
res/: bat_checkout_branch.cmd  bat_enum_branchs.cmd  bat_enum_remotes.cmd  bat_get_pr.cmd  make_pch_source.py
src/: BatchCommand.cpp  GitHubPR.cpp  GitHubPR.rc  PrivateProfile.cpp  generic.cpp  wmain.cpp
test/: BatchCommandTest.cpp  CMakeLists.txt  PrivateProfileTest.cpp  StdAfx.cpp  StdAfx.h  genericTest.cpp  pch.h
